// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.ads.admanager.v1;

option csharp_namespace = "Google.Ads.AdManager.V1";
option go_package = "google.golang.org/genproto/googleapis/ads/admanager/v1;admanager";
option java_multiple_files = true;
option java_outer_classname = "ReportValueProto";
option java_package = "com.google.ads.admanager.v1";
option php_namespace = "Google\\Ads\\AdManager\\V1";
option ruby_package = "Google::Ads::AdManager::V1";

// Represents a single value in a report.
message ReportValue {
  // A list of integer values.
  message IntList {
    // The values
    repeated int64 values = 1;
  }

  // A list of string values.
  message StringList {
    // The values
    repeated string values = 1;
  }

  // A list of double values.
  message DoubleList {
    // The values
    repeated double values = 1;
  }

  // The value of the field, depends on the field's data format.
  oneof value {
    // For integer values.
    int64 int_value = 1;

    // For double values.
    double double_value = 2;

    // For string values.
    string string_value = 3;

    // For boolean values.
    bool bool_value = 4;

    // For lists of integer values.
    IntList int_list_value = 6;

    // For lists of string values.
    StringList string_list_value = 7;

    // For lists of double values.
    DoubleList double_list_value = 9;

    // For bytes values.
    bytes bytes_value = 8;
  }
}
